--- a/plugintest/ocx1.1.1/ocxLocalplay.html
+++ b/plugintest/ocx1.1.1/ocxLocalplay.html
@@ -16,7 +16,7 @@
       }
 
       function play(){
-        //var file = "http://172.19.82.77:9160/test/video/0.dav";
+        //var file = "http://172.19.82.43:8086/hls/2.mp4";
         var file = "e://test.mp4";
         if(recordVideoOcx.PlayFile(0,4, file)){
           recordVideoOcx.SetVideoWndHandle(0, 0);
