增加css自定义绘制树形结构demo

--- a/plugintest/video/jwplayer/demo.html
+++ b/plugintest/video/jwplayer/demo.html
@@ -13,7 +13,7 @@
    var server = window.location.hostname;  
    // mylive 对应nginx.conf配置项application的名字  
    // live_stream 对应Adobe Flash Stream Media Live Encoder配置的stream名称  
-   var live_url = 'rtmp://172.19.82.123:1935/oflaDemo/265';
+   var live_url = 'rtmp://172.19.82.247:9001/live/mp4';
   jwplayer('mediaspace').setup({  
     'flashplayer': 'jwplayer.flash.swf',  
     'file': live_url,  
