--- a/plugintest/VLC/vlc_play.html
+++ b/plugintest/VLC/vlc_play.html
@@ -75,7 +75,7 @@
 <body>
 <div style="margin: 50px">
 	<span style="margin: 20px;" />
-	<a title="rtsp://admin:admin123@172.19.82.120" href="#" onclick="doGo(this.title);return false;">实时视频流</a>
+	<a title="http://172.19.82.123:9160/upload/2.mp4" href="#" onclick="doGo(this.title);return false;">实时视频流</a>
 	<a title="http://172.19.82.248:8080/upload/%EF%BC%882016%EF%BC%89%E6%B5%99%E6%89%A7%E6%B5%8B%E5%A4%8D44%E5%8F%B7/video/test.mp4" href="#" onclick="doGo(this.title);return false;">http流</a>
 	<a title="http://172.19.82.209:9160/upload/test11.ps" href="#" onclick="doGo(this.title);return false;">ps</a>
 	<a title="http://172.19.82.209:9160/upload/test.mp3" href="#" onclick="doGo(this.title);return false;">mp3</a>
