--- a/plugintest/video/videojs_RTMP_test.html
+++ b/plugintest/video/videojs_RTMP_test.html
@@ -14,15 +14,17 @@
 <body>
 <video id='myvideo' width=960 height=540 class="video-js vjs-default-skin" controls>
 	<!-- RTMP直播源地址-->
-	<!--<source src="rtmp://live.hkstv.hk.lxdns.com/live/hks1">-->
+	<source src="http://172.19.82.123:9160/upload/2.mp4">
 	<!-- 一定可以播出来的地址-->
-	<source src="rtmp://mobliestream.c3tv.com:554/live/goodtv.sdp">
+	<!--<source src="rtmp://mobliestream.c3tv.com:554/live/goodtv.sdp">-->
 
 </video>
 <script>
     var player = videojs('myvideo', {
 
-	}, function(){console.log('videojs播放器初始化成功')});
+	}, function(){
+        console.log('videojs播放器初始化成功')
+    });
     player.play();
 </script>
 </body>
