--- a/plugintest/video/videojs_base_conf.html
+++ b/plugintest/video/videojs_base_conf.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=10" />
-
-<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <head>
 
 	<title>Video.js | HTML5 Video Player</title>
 	<link href="../../src/video/video-js.css" rel="stylesheet">
-	<script src="../../src/video/videojs-ie8.min.js"></script>
 	<script src="../../src/video/video.js"></script>
 
 </head>
 
 <body>
 <video id="example_video_1" class="video-js" controls preload="none" width="640" height="264" poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
-	<source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-	<source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm">
-	<source src="http://vjs.zencdn.net/v/oceans.ogv" type="video/ogg">
-	<track kind="captions" src="../shared/example-captions.vtt" srclang="en" label="English">
-	<track kind="subtitles" src="../shared/example-captions.vtt" srclang="en" label="English">
-	<p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+	<!--<source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">-->
+	<source src="./src/test.mp4" type="video/mp4">
+
+	<!--<source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm">-->
+	<!--<source src="http://vjs.zencdn.net/v/oceans.ogv" type="video/ogg">-->
+	<!--<track kind="captions" src="../shared/example-captions.vtt" srclang="en" label="English">-->
+	<!--<track kind="subtitles" src="../shared/example-captions.vtt" srclang="en" label="English">-->
+	<!--<p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>-->
 </video>
 
 <script>
     var player = videojs('example_video_1',{
+        width:600,//宽
+        height:500,//高
         controls: true, //启用控制条：boolean
+        /**
+         * 自动播放：true/false
+         * 参数类型：Boolean
+         **/
+        autoplay: false,
+        playbackRates: [0.5, 1, 1.5, 2],// 播放速率
+        techOrder: ["flash","html5"],
+        //aspectRatio: '9:16',// 播放比例
         controlBar: {
+            'currentTimeDisplay':true,
+            'timeDivider':true,
+            'durationDisplay':true,
+            'remainingTimeDisplay':false,
             // 隐藏重播图标
             playToggle: {
                 replay: false
@@ -34,9 +46,7 @@
             // 竖直的音量控制
             volumePanel: {
                 inline: false
-            },
-            // 播放进度控制
-            progressControl: true
+            }
         }
 	},function () {
         console.log(this);
