--- a/plugintest/video/videojs_HLS_test.html
+++ b/plugintest/video/videojs_HLS_test.html
@@ -15,6 +15,8 @@
 <video id='myvideo' width=960 height=540 class="video-js vjs-default-skin" controls>
 	<!-- hls直播源地址：CCTV1高清 -->
 	<source src="http://ivi.bupt.edu.cn/hls/cctv1hd.m3u8">
+	<!--<source src="http://prdlive.ainemo.com/prdnemo/2c949a2972a98c860172ff27733a1bbf.m3u8?auth_key=1593591475-0-0-604226f0f2ea91f39a7a5b663137ee96">-->
+
 </video>
 
 <script src="../../src/bootstrap/js/jquery-1.11.3.js"></script>
