--- a/plugintest/message/basic.html
+++ b/plugintest/message/basic.html
@@ -9,22 +9,22 @@
 <div class="chat-area">
     <!-- 上方信息区域 -->
     <div class="chat-list">
-        <section class="chat-right">
+        <div class="chat-right">
             <div>收到</div>
             <span>这是一份合成辅导费</span>
-        </section>
-        <section class="chat-left">
+        </div>
+        <div class="chat-left">
             <span>2471814041@qq.com`</span>
             <div>大幅度</div>
-        </section>
-        <section class="chat-right">
+        </div>
+        <div class="chat-right">
             <div>afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方afaaaaaa辅导辅导费对方答复地方的负担地方的负担对方答复的辅导辅导费对方答复地方</div>
             <span>收到是多少多是</span>
-        </section>
-        <section class="chat-left">
+        </div>
+        <div class="chat-left">
             <span>撒大声地</span>
             <div>收到是多少多撒大声地撒大声地收到收到撒大声地收到所多收到是多少多撒大声地撒大声地收到收到撒大声地收到所多收到是多少多撒大声地撒大声地收到收到撒大声地收到所多</div>
-        </section>
+        </div>
     </div>
     <div class="chat-send">
         <div class="input">
