消息聊天样式修改

--- a/plugintest/message/basic.html
+++ b/plugintest/message/basic.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="./message.css">
+    <link rel="stylesheet" href="basic.css">
 </head>
 <body>
 <!-- 右侧聊天面板 -->
