--- a/plugintest/VLC/vedio_play.html
+++ b/plugintest/VLC/vedio_play.html
@@ -26,7 +26,7 @@ function initPlayUrl(){
  // vlc.playlist.play();
  // 添加播放地址方式2 -- 推荐用下面的方法控制播放列表
   //vedio_url =""; // 播放路径
- var vedio_url = "rtsp://184.72.239.149/vod/mp4://BigBuckBunny_175k.mov";
+ var vedio_url = "rtmp://172.19.82.228:1960/NBVod/mp4|D:/SNTest/1/2";
  console.log(vlc)
  //var vedio_url=window.opener.vdUrl;
  itemId= vlc.playlist.add(vedio_url);
