--- a/plugintest/video/audio_k.html
+++ b/plugintest/video/audio_k.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../../src/video/k-audio.js"></script>
+	<script src="./videojs/k-audio.js"></script>
 </head>
 <body>
 <!--<audio src="src/alarmvoice.mp3"></audio>-->
