--- a/plugintest/video/videojs.html
+++ b/plugintest/video/videojs.html
@@ -7,9 +7,9 @@
 <head>
 
 	<title>Video.js | HTML5 Video Player</title>
-	<link href="../../src/video/video-js.css" rel="stylesheet">
-	<script src="../../src/video/videojs-ie8.min.js"></script>
-	<script src="../../src/video/video.js"></script>
+	<link href="./videojs/video-js.css" rel="stylesheet">
+	<script src="./videojs/videojs-ie8.min.js"></script>
+	<script src="./videojs/video.js"></script>
 
 </head>
 
@@ -23,6 +23,12 @@
 <script src="../../src/bootstrap/js/jquery-1.11.3.js"></script>
 
 <script>
+	/*
+	*
+	*
+	*
+	*
+	* */
 	$(function () {
     var myPlayer = videojs("video_play");
     $('#startplaybtn').click(function () {
