--- a/plugintest/video/videojs_HLS_test.html
+++ b/plugintest/video/videojs_HLS_test.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <head>
 	<title>Video.js | HTML5 Video Player</title>
-	<link href="../../src/video/video-js.css" rel="stylesheet">
-	<script src="../../src/video/video.js"></script>
+	<link href="./videojs/video-js.css" rel="stylesheet">
+	<script src="./videojs/video.js"></script>
 
 </head>
 
