--- a/plugintest/video/videojs_base_conf.html
+++ b/plugintest/video/videojs_base_conf.html
@@ -4,8 +4,8 @@
 <head>
 
 	<title>Video.js | HTML5 Video Player</title>
-	<link href="../../src/video/video-js.css" rel="stylesheet">
-	<script src="../../src/video/video.js"></script>
+	<link href="./videojs/video-js.css" rel="stylesheet">
+	<script src="./videojs/video.js"></script>
 
 </head>
 
@@ -32,7 +32,7 @@
          **/
         autoplay: false,
         playbackRates: [0.5, 1, 1.5, 2],// 播放速率
-        techOrder: ["flash","html5"],
+        techOrder: ["html5","flash"],
         //aspectRatio: '9:16',// 播放比例
         controlBar: {
             'currentTimeDisplay':true,
