--- a/plugintest/video/videojs_jsadd.html
+++ b/plugintest/video/videojs_jsadd.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=10" />
 	<title>Video.js Test Suite</title>
-	<link href="../../src/video/video-js.css" rel="stylesheet">
-	<script src="../../src/video/videojs-ie8.min.js"></script>
-	<script src="../../src/video/video.js"></script>
+	<link href="./videojs/video-js.css" rel="stylesheet">
+	<script src="./videojs/video.js"></script>
 </head>
 <body>
 <button id="add">动态增加videojs</button>
