--- a/plugintest/VLC/addEvent.html
+++ b/plugintest/VLC/addEvent.html
@@ -6,7 +6,7 @@
 
 </head>
 <body onLoad="init();">
-<a title="rtsp://184.72.239.149/vod/mp4://BigBuckBunny_175k.mov" href="#" onclick="doGo(this.title);return false;">视频1</a>
+<a title=rtmp://172.19.82.228:1960/NBVod/mp4|D://SNTest//1//2" href="#" onclick="doGo(this.title);return false;">视频1</a>
 <a title="rtsp://admin:admin@172.19.82.241:554/cam/realmonitor?channel=4&subtype=0" href="#" onclick="doGo(this.title);return false;">视频2</a>
     <div style="height: 500px;width:500px;">
         <object type='application/x-vlc-plugin' id='vlc' events='True' width="100%" height="100%" pluginspage="http://www.videolan.org" codebase="http://downloads.videolan.org/pub/videolan/vlc-webplugins/2.0.6/npapi-vlc-2.0.6.tar.xz">
