--- a/plugintest/video/videojs_RTMP_test.html
+++ b/plugintest/video/videojs_RTMP_test.html
@@ -5,10 +5,10 @@
 <head>
 	<title>Video.js | HTML5 Video Player</title>
 	<!-- 导入的videojs是7.0版本以上的，集成VHS协议库，可播放HLS流媒体视频 -->
-	<link href="../../src/video/videolib/css/video-js.min.css" rel="stylesheet">
-	<script src="../../src/video/videolib/js/video.min.js"></script>
+	<link href="./videojs/videolib/css/video-js.min.css" rel="stylesheet">
+	<script src="./videojs/videolib/js/video.min.js"></script>
 	<!-- 引入的videojs-flash.js插件主要是为播放rtmp视频流-->
-	<script src="../../src/video/videolib/videojs-flash.min.js"></script>
+	<script src="./videojs/videolib/videojs-flash.min.js"></script>
 </head>
 
 <body>
