增加审委会demo首页

--- a/netDemo/index.html
+++ b/netDemo/index.html
@@ -2,9 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 <body>
-$END$
+<div class="list-box full-height">
+    <div class="list-title font_color_white clearfix">
+        <span class="fl">福建省高级人民法院</span>
+        <span class="fl">2021年审判委员会第28次会议</span>
+        <span class="fr">14:20</span>
+        <span class="name-box fr">欢迎您,温</span>
+
+    </div>
+    <div class="content">
+        <div class="content-title">
+            <p>省法院审判委员会会议安排表</p>
+            <p>2021年 第28次</p>
+        </div>
+        <div class="content-wrapper">
+            <div class="row">
+                <div class="col-xs-3 txt-right">
+                    会议时间:
+                </div>
+                <div class="col-xs-9">
+                    2021年04月13日
+                </div>
+                <div class="col-xs-3 txt-right">
+                    会议地点:
+                </div>
+                <div class="col-xs-9">
+                    审委会会议室 审委会
+                </div>
+                <div class="col-xs-3 txt-right">
+                    主持人:
+                </div>
+                <div class="col-xs-9">
+                    吴林
+                </div>
+                <div class="col-xs-3 txt-right">
+                    出席情况:
+                </div>
+                <div class="col-xs-9">
+                    <span>
+                        应到
+                        <b class="red">17</b>
+                        人
+
+
+                    </span>
+                    <span>
+                         实到                        <b class="red">17</b>
+人
+                    </span>
+                    <span>
+                        缺席                        <b class="red">17</b>
+人
+                    </span>
+                </div>
+                <div class="col-xs-3 txt-right">
+                    缺席人员:
+                </div>
+                <div class="col-xs-9">
+                    吴林,张三,李四
+                </div>
+                <div class="col-xs-3 txt-right">
+                    列席人员:
+                </div>
+                <div class="col-xs-9">
+                    吴林,张三,李四
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="list-footer">
+        <span class="btn-opt fr" >大屏投放</span>
+        <span class="btn-opt fr" >下一页</span>
+    </div>
+</div>
+<script src="./jquery-1.11.3.js"></script>
+<script src="./bootstrap.js"></script>
 </body>
 </html>
